# avg

./: .gitignore  Dockerfile  Main.hs  Makefile  README.md  avg.cabal  cabal.project  test_cli.sh
.beads/: issues.jsonl  metadata.json
.circleci/: config.yml
.github/workflows/: ci.yml
mutest/: Spec.hs
